# clue

./: .gitattributes  .gitignore  .mise.toml  ANALYSIS-info-hierarchy.md  CLAUDE.md  README.md  board.py  board.txt  docker-compose.yml  package-lock.json  package.json  playwright.config.js  room-prompts.md
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  resize-images.yml
backend/: Dockerfile  agent_runner.py  main.py  pyproject.toml  requirements.txt
backend/app/: agents.py  board.py  game.py  llm_agent.py  logging.py  main.py  models.py  ws_manager.py
backend/app/games/: __init__.py  agent_loop.py
backend/app/games/clue/: __init__.py  agent_loop.py  agents.py  board.py  board.txt  game.py  models.py  official_rules.md  room-prompts.md
backend/app/games/holdem/: __init__.py  agent_loop.py  agents.py  cards.md  game.py  hand_eval.py  models.py  modern.md
backend/static/: index.html
backend/tests/: test_agent_game.py  test_agent_inference.py  test_agent_runner.py  test_board.py  test_game.py  test_holdem.py  test_holdem_agent.py  test_resize_thumbnails_script.py  test_ws_e2e.py
frontend/: .gitignore  .prettierignore  .prettierrc  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.js  tsconfig.json  vite.config.js  vitest.config.ts  vitest.workspace.js
frontend/.storybook/: main.ts  preview.ts
frontend/public/: room-preview.html
frontend/src/: App.vue  board-test.html  board-test.js  main.js
frontend/tests/: board-background.spec.js
k8s/: agent-runner.yaml  backend.yaml  clusterissuer.yaml  frontend.yaml  ingress.yaml  namespace.yaml  redis.yaml  secrets.yaml
scripts/: card_grid_reference.md  clean_cards.py  deploy.sh  dump_game.py  generate_cards.py  git_history_screenshot_worker.js  git_history_screenshots.sh  live_ws_test.py  mage_generate.py  process_mage_output.py  ref_10_spades.heic  ref_3_spades.heic  resize_thumbnails.sh  take_screenshots.js  tournament.py
(+57 files in other folders)
