[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fakeredis>=2.34.1",
    "fastapi>=0.134.0",
    "httpx>=0.28.1",
    "pillow>=12.2.0",
    "playwright>=1.58.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "redis>=7.2.1",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
]

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "app.games*", "app.games.clue*", "app.games.holdem*"]

[tool.setuptools]
py-modules = ["agent_runner"]
